# video-restoration-pipeline-framewright

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  WIZARD_GUIDE.md  launch_ui_server.py  pyproject.toml  requirements.txt  run_wizard.py  wizard.bat  wizard.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  IMPROVEMENTS_IMPLEMENTED.md  To-do.md  cloud-guide.md  hardware.md  improvements.md  presets.md  quickstart.md  roadmap.md  troubleshooting.md
notebooks/: FrameWright_Colab.ipynb
scripts/: audio_enhance.sh  dashboard_full.py  dashboard_server.py  dashboard_smart.py  dashboard_smart.py.broken  gdrive_workflow.py  install.bat  install.sh  package.json  qwen-mcp-server.mjs  restore.sh  vastai_setup.sh
src/framewright/: __init__.py  __main__.py  checkpoint.py  cli.py  cli_advanced.py  cli_parser.py  cli_simple.py  config.py  dry_run.py  errors.py  exceptions.py  hardware.py  metrics.py  restorer.py  ui.py  ui_model_guide.md  validators.py  watch.py
src/framewright/_ui_pkg/: __init__.py  auto_detect.py  preview.py  progress.py  recommendations.py  terminal.py  wizard.py
src/framewright/_ui_pkg/api/: __init__.py  client.py  server.py
src/framewright/_ui_pkg/cli/: __init__.py  main.py  wizard.py
src/framewright/_ui_pkg/dashboard/: __init__.py  server.py  templates.py
src/framewright/_ui_pkg/preview/: __init__.py  server.py
src/framewright/batch/: __init__.py  batch_templates.py  daemon.py  queue_processor.py  scheduler.py
src/framewright/benchmarks/: __init__.py  benchmark_suite.py  profiler.py
src/framewright/cloud/: __init__.py  base.py  burst.py  cli.py  gdrive.py  runpod.py  storage.py  vastai.py
src/framewright/commands/: README.md  __init__.py  analysis.py  batch.py  config.py  core.py  hardware.py  integration.py  models.py  presets.py  utils.py
src/framewright/core/: __init__.py  authenticity.py  config.py  errors.py  events.py  types.py
src/framewright/dashboard/: __init__.py  app.py  server.py
src/framewright/diagnostics/: __init__.py  analyzer.py  recovery.py
src/framewright/distributed/: __init__.py  coordinator.py  discovery.py  job.py  worker.py
src/framewright/engine/: __init__.py  checkpoint.py  pipeline.py  scheduler.py  temporal_consistency.py
src/framewright/export/: __init__.py  comparison_video.py  comparison_viewer.py  presets.py  sidecar.py  thumbnail_grid.py  validation.py
src/framewright/infrastructure/: __init__.py
src/framewright/infrastructure/cache/: __init__.py  eviction.py  frame_cache.py  (+1 more)
src/framewright/integration/: __init__.py  archive_org.py  edl.py  lut.py  media_libraries.py  notifications.py  webhooks.py  youtube_upload.py
src/framewright/mixins/: __init__.py  frame_processing.py  video_assembly.py
src/framewright/nlp/: __init__.py  interpreter.py  parser.py
src/framewright/optimization/: __init__.py  mixed_precision.py  pipeline.py
src/framewright/persistence/: __init__.py  checkpoint_manager.py  job_store.py  progress_tracker.py
src/framewright/plugins/: __init__.py  base.py  hooks.py  manager.py
src/framewright/presets/: __init__.py  analyzer.py  generator.py  library.py  preset_library.py  presets.yaml  registry.py  smart_selector.py
src/framewright/processors/: __init__.py  adaptive_enhance.py  advanced_models.py  aesrgan_face.py  analyzer.py  aspect_correction.py  audio.py  audio_enhance.py  audio_restoration.py  audio_sync.py  benchmark.py  colorization.py  credits_detector.py  cross_attention_temporal.py  deduplication.py  defect_repair.py  diffusion_sr.py  ensemble_sr.py  face_restore.py  film_restoration.py  film_stock_detector.py  frame_generation.py  frame_quality_scorer.py  hat_upscaler.py  hdr_conversion.py  hdr_expansion.py  interlace_handler.py  interpolation.py  letterbox_handler.py  ncnn_vulkan.py  noise_profiler.py  perceptual_tuning.py  preview.py  pytorch_realesrgan.py  qp_artifact_removal.py  quality_control.py  quick_preview.py  raft_flow.py  reference_enhance.py  scene_detection.py  (+14 more)
src/framewright/project/: __init__.py  project_manager.py
src/framewright/quality/: __init__.py  analyzer.py  heatmaps.py  vmaf.py
src/framewright/queue/: __init__.py
src/framewright/recipes/: __init__.py  executor.py  library.py
src/framewright/reports/: __init__.py  cost_calculator.py  qa_report.py  trends.py
src/framewright/testing/: __init__.py  ab_testing.py  comparison.py
src/framewright/utils/: __init__.py  async_io.py  cache.py  cli_helpers.py  config_file.py  dependencies.py  disk.py  ffmpeg.py  gpu.py  gpu_memory_optimizer.py  logging.py  model_manager.py  model_manager_cli.py  multi_gpu.py  output_manager.py  output_templates.py  power_manager.py  profiles.py  progress.py  scheduler.py  security.py  thermal_monitor.py  webhook.py  youtube.py
src/framewright/validation/: __init__.py  quality_gates.py  validators.py
src/framewright/workflow/: __init__.py  automation.py  processing_safeguards.py  proxy.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_enhance.py  test_audio_sync.py  test_benchmark_suite.py  test_cache.py  test_checkpoint.py  test_cli.py  test_colorization.py  test_config.py  test_errors.py  test_hardware.py  test_infrastructure.py  test_metrics.py  test_model_manager.py  test_multi_gpu.py  test_output_manager.py  test_progress.py  test_progress_info.py  test_restorer.py  test_scene_detection.py  test_stabilization.py  test_subtitle_removal.py  test_subtitles.py  test_temporal_denoise.py  test_utils_dependencies.py  test_utils_disk.py  test_utils_gpu.py  test_validators.py  test_watermark_removal.py
tests/fixtures/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_commands.py  test_error_recovery.py  test_full_pipeline.py
tests/test_processors/: __init__.py  test_colorization.py  test_face_restore.py  test_interpolation.py  test_pytorch_realesrgan.py  test_scene_intelligence.py  test_tap_denoise.py
(+37 files in other folders)
