[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framewright"
version = "1.4.0"
description = "AI-powered video restoration and enhancement pipeline with web UI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FrameWright Team"}
]
keywords = ["video", "restoration", "ai", "enhancement", "upscaling", "real-esrgan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "yt-dlp>=2023.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.2.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "types-tqdm>=4.65.0",
]
ui = [
    "gradio>=4.0.0",
]
full = [
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "opencv-python>=4.8.0",
]
colorization = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
watermark = [
    "simple-lama-inpainting>=0.1.0",
    "opencv-python>=4.8.0",
]
progress = [
    "rich>=13.0.0",
    "pynvml>=11.0.0",
]
cloud = [
    "boto3>=1.26.0",
    "runpod>=1.0.0",
    "requests>=2.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.14.0",
]
all = [
    "framewright[full,colorization,watermark,progress,cloud]",
]

[project.scripts]
framewright = "framewright.cli:main"
framewright-ui = "framewright.cli:launch_ui"
framewright-check = "framewright.cli:check_hardware"

[project.urls]
Homepage = "https://github.com/framewright/framewright"
Documentation = "https://github.com/framewright/framewright#readme"
Repository = "https://github.com/framewright/framewright"
Issues = "https://github.com/framewright/framewright/issues"

[tool.setuptools]
packages = ["framewright", "framewright.processors", "framewright.utils", "framewright.cloud", "framewright.benchmarks"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
framewright = ["py.typed"]

# Ruff Configuration
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # unused arguments in tests (fixtures)
    "PLR2004", # magic values in tests
]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["framewright"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy Configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external tools",
    "e2e: marks tests as end-to-end tests requiring full pipeline",
    "gpu: marks tests requiring GPU hardware (deselect with '-m \"not gpu\"')",
    "ffmpeg: marks tests requiring FFmpeg installation",
    "realesrgan: marks tests requiring Real-ESRGAN installation",
    "rife: marks tests requiring RIFE installation",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src/framewright"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
